# s2stx

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  export_onnx.py  train_codec.py  train_lm.py
src/codec/: __init__.py  rvq.py  streaming_codec.py
src/data/: __init__.py  audio_datasets.py
src/lm/: __init__.py  transformer_lm.py
