[project]
name = "pure-audio-codec-lm"
version = "0.1.0"
description = "Pure-audio neural codec LM (<100M, streaming, ONNX) with Colab-friendly training scripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "datasets>=2.19.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "PyYAML>=6.0.0",
    "torchcodec",
]

[tool.uv]
package = true


